update client-side store on server push event
